--- a/package.json
+++ b/package.json
@@ -13,18 +13,26 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^3.1.9",
+    "@astrojs/react": "^4.1.2",
     "@astrojs/rss": "^4.0.9",
-    "@astrojs/react": "^3.6.2",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/tailwind": "^5.1.4",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@shadcn/ui": "^0.0.4",
+    "@types/react-dom": "^19.0.2",
     "astro": "^4.16.9",
     "astro-auto-import": "^0.4.4",
     "astro-font": "^0.1.81",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "disqus-react": "^1.1.5",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.469.0",
     "marked": "^14.1.3",
+    "next-themes": "^0.4.4",
     "react-feather": "^2.0.10",
     "react-icons": "^5.3.0",
     "react-lite-youtube-embed": "^2.4.0",
@@ -32,24 +40,27 @@
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
     "shufflejs": "^6.1.1",
-    "swiper": "^11.1.14"
+    "sonner": "^1.7.1",
+    "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@types/marked": "^5.0.2",
-    "@types/react": "^18.3.12",
+    "@types/react": "^19.0.2",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "autoprefixer": "^10.4.20",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "sass": "^1.80.6",
     "sharp": "0.33.5",
     "tailwind-bootstrap-grid": "^5.1.0",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^3.4.17",
     "typescript": "5.6.3"
   }
 }
