--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@shadcn/ui": "^0.0.4",
     "@types/react-dom": "^19.0.2",
+    "@vercel/speed-insights": "^1.1.0",
     "astro": "^4.16.9",
     "astro-auto-import": "^0.4.4",
     "astro-font": "^0.1.81",
