--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # API Configuration
-VITE_API_URL=http://localhost:8080
+NEXT_PUBLIC_API_URL=http://localhost:8080
 
 # Add any additional environment variables below 
