--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pinwheel-astro",
   "version": "2.0.1",
   "description": "Astro and Tailwindcss boilerplate",
-  "author": "themefisher",
+  "author": "ssh-keyz",
   "license": "MIT",
   "packageManager": "yarn@1.22.19",
   "scripts": {
